# grn_analysis_tools

./: README.md  pyproject.toml
.github/workflows/: conda-build.yml
conda-recipe/: conda_build_config.yaml  meta.yaml
src/grn_analysis_tools/: grn_formatting.py  grn_stats.py  helper_functions.py  plotting.py  resource_analysis.py
