[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grn_analysis_tools"
version = "0.0.4"
description = "A package with helper functions for analyzing gene regulatory network inference methods"
requires-python = ">=3.8"
authors = [{ name = "Eric Moeller", email = "luminarada80@gmail.com" }]